[package]
name = "cadre"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.30"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.79"
js-sys = "0.3"
stl_io = "0.6.0"
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3"
features = [ 
  "console", 
  "Window",
  "Document",
  "Element",
	"Node",
  "HtmlElement",
  "CssStyleDeclaration",
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
	'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Response',
  ]
